tests/ui/once_key_rejected.stderr
error: `key` is not supported on `#[once]`; `#[once]` stores a single value for all arguments and has no per-call cache key
 --> tests/ui/once_key_rejected.rs:4:4
  |
4 | fn f(a: i32) -> i32 {
  |    ^
